src/JamFileTool/Parsing/Parser/Mdb/MdbParser.cpp

// Generated from ..\..\..\src\JamFileTool\Parsing\Parser\Mdb\Mdb.g4 by ANTLR 4.10.1


#include "MdbListener.h"

#include "MdbParser.h"


using namespace antlrcpp;
using namespace mdb;

using namespace antlr4;

namespace {

struct MdbParserStaticData final {
  MdbParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MdbParserStaticData(const MdbParserStaticData&) = delete;
  MdbParserStaticData(MdbParserStaticData&&) = delete;
  MdbParserStaticData& operator=(const MdbParserStaticData&) = delete;
  MdbParserStaticData& operator=(MdbParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag mdbParserOnceFlag;
MdbParserStaticData *mdbParserStaticData = nullptr;

void mdbParserInitialize() {
  assert(mdbParserStaticData == nullptr);
  auto staticData = std::make_unique<MdbParserStaticData>(
    std::vector<std::string>{
      "root", "materials", "material", "materialName", "material_property", 
      "colorMaterialProperty", "colorMaterialPropertyKeyword", "textMaterialProperty", 
      "textMaterialPropertyKeyword", "uint8MaterialProperty", "uint8MaterialPropertyKeyword", 
      "intMaterialProperty", "intMaterialPropertyKeyword", "singleValueKeywords", 
      "keyword2F", "keyword2FSubtoken", "keyword38", "keyword38Subtoken"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "'materials'", "'material'", "'color1'", "'color0'", 
      "'keyword2A'", "'keyword2B'", "'texture'", "'keyword2D'", "'keyword2E'", 
      "'keyword2F'", "'keyword30'", "'keyword31'", "'keyword32'", "'keyword33'", 
      "'keyword34'", "'keyword35'", "'keyword36'", "'keyword37'", "'keyword38'", 
      "'keyword39'", "'keyword3A'", "'keyword3B'", "'keyword3C'", "'keyword3D'", 
      "'keyword3E'", "'keyword3F'", "'keyword40'", "'keyword41'", "'keyword42'", 
      "'keyword43'", "'keyword44'", "'keyword45'", "'opacity'", "'keyword47'", 
      "'keyword48'", "'keyword49'", "'keyword4A'", "'keyword4B'", "'keyword4C'", 
      "'keyword4D'", "'keyword4E'", "'keyword4F'", "'keyword50'"
    },
    std::vector<std::string>{
      "", "", "", "Materials", "Material", "Color1", "Color0", "Keyword2A", 
      "Keyword2B", "Texture", "Keyword2D", "Keyword2E", "Keyword2F", "Keyword30", 
      "Keyword31", "Keyword32", "Keyword33", "Keyword34", "Keyword35", "Keyword36", 
      "Keyword37", "Keyword38", "Keyword39", "Keyword3A", "Keyword3B", "Keyword3C", 
      "Keyword3D", "Keyword3E", "Keyword3F", "Keyword40", "Keyword41", "Keyword42", 
      "Keyword43", "Keyword44", "Keyword45", "Opacity", "Keyword47", "Keyword48", 
      "Keyword49", "Keyword4A", "Keyword4B", "Keyword4C", "Keyword4D", "Keyword4E", 
      "Keyword4F", "Keyword50", "IntegerConstant", "StringLiteral", "Whitespace", 
      "Newline", "BlockComment", "LineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mdbParserStaticData = staticData.release();
}

}

MdbParser::MdbParser(TokenStream *input) : MdbParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MdbParser::MdbParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MdbParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mdbParserStaticData->atn, mdbParserStaticData->decisionToDFA, mdbParserStaticData->sharedContextCache, options);
}

MdbParser::~MdbParser() {
  delete _interpreter;
}

const atn::ATN& MdbParser::getATN() const {
  return *mdbParserStaticData->atn;
}

std::string MdbParser::getGrammarFileName() const {
  return "Mdb.g4";
}

const std::vector<std::string>& MdbParser::getRuleNames() const {
  return mdbParserStaticData->ruleNames;
}

const dfa::Vocabulary& MdbParser::getVocabulary() const {
  return mdbParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MdbParser::getSerializedATN() const {
  return mdbParserStaticData->serializedATN;
}


//----------------- RootContext ------------------------------------------------------------------

MdbParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MdbParser::MaterialsContext* MdbParser::RootContext::materials() {
  return getRuleContext<MdbParser::MaterialsContext>(0);
}


size_t MdbParser::RootContext::getRuleIndex() const {
  return MdbParser::RuleRoot;
}

void MdbParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void MdbParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}

MdbParser::RootContext* MdbParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, MdbParser::RuleRoot);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    materials();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MaterialsContext ------------------------------------------------------------------

MdbParser::MaterialsContext::MaterialsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MdbParser::MaterialsContext::Materials() {
  return getToken(MdbParser::Materials, 0);
}

std::vector<MdbParser::MaterialContext *> MdbParser::MaterialsContext::material() {
  return getRuleContexts<MdbParser::MaterialContext>();
}

MdbParser::MaterialContext* MdbParser::MaterialsContext::material(size_t i) {
  return getRuleContext<MdbParser::MaterialContext>(i);
}


size_t MdbParser::MaterialsContext::getRuleIndex() const {
  return MdbParser::RuleMaterials;
}

void MdbParser::MaterialsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMaterials(this);
}

void MdbParser::MaterialsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMaterials(this);
}

MdbParser::MaterialsContext* MdbParser::materials() {
  MaterialsContext *_localctx = _tracker.createInstance<MaterialsContext>(_ctx, getState());
  enterRule(_localctx, 2, MdbParser::RuleMaterials);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(MdbParser::Materials);
    setState(39);
    match(MdbParser::T__0);
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MdbParser::Material) {
      setState(40);
      material();
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(46);
    match(MdbParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MaterialContext ------------------------------------------------------------------

MdbParser::MaterialContext::MaterialContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MdbParser::MaterialContext::Material() {
  return getToken(MdbParser::Material, 0);
}

MdbParser::MaterialNameContext* MdbParser::MaterialContext::materialName() {
  return getRuleContext<MdbParser::MaterialNameContext>(0);
}

std::vector<MdbParser::Material_propertyContext *> MdbParser::MaterialContext::material_property() {
  return getRuleContexts<MdbParser::Material_propertyContext>();
}

MdbParser::Material_propertyContext* MdbParser::MaterialContext::material_property(size_t i) {
  return getRuleContext<MdbParser::Material_propertyContext>(i);
}


size_t MdbParser::MaterialContext::getRuleIndex() const {
  return MdbParser::RuleMaterial;
}

void MdbParser::MaterialContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMaterial(this);
}

void MdbParser::MaterialContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMaterial(this);
}

MdbParser::MaterialContext* MdbParser::material() {
  MaterialContext *_localctx = _tracker.createInstance<MaterialContext>(_ctx, getState());
  enterRule(_localctx, 4, MdbParser::RuleMaterial);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    match(MdbParser::Material);
    setState(49);
    materialName();
    setState(50);
    match(MdbParser::T__0);
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MdbParser::Color1)
      | (1ULL << MdbParser::Color0)
      | (1ULL << MdbParser::Keyword2A)
      | (1ULL << MdbParser::Keyword2B)
      | (1ULL << MdbParser::Texture)
      | (1ULL << MdbParser::Keyword2D)
      | (1ULL << MdbParser::Keyword2E)
      | (1ULL << MdbParser::Keyword2F)
      | (1ULL << MdbParser::Keyword38)
      | (1ULL << MdbParser::Keyword44)
      | (1ULL << MdbParser::Keyword45)
      | (1ULL << MdbParser::Opacity)
      | (1ULL << MdbParser::Keyword47)
      | (1ULL << MdbParser::Keyword48)
      | (1ULL << MdbParser::Keyword49)
      | (1ULL << MdbParser::Keyword4A)
      | (1ULL << MdbParser::Keyword4B)
      | (1ULL << MdbParser::Keyword4C)
      | (1ULL << MdbParser::Keyword4D)
      | (1ULL << MdbParser::Keyword4E)
      | (1ULL << MdbParser::Keyword4F)
      | (1ULL << MdbParser::Keyword50))) != 0)) {
      setState(51);
      material_property();
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(57);
    match(MdbParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MaterialNameContext ------------------------------------------------------------------

MdbParser::MaterialNameContext::MaterialNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MdbParser::MaterialNameContext::StringLiteral() {
  return getToken(MdbParser::StringLiteral, 0);
}


size_t MdbParser::MaterialNameContext::getRuleIndex() const {
  return MdbParser::RuleMaterialName;
}

void MdbParser::MaterialNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMaterialName(this);
}

void MdbParser::MaterialNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMaterialName(this);
}

MdbParser::MaterialNameContext* MdbParser::materialName() {
  MaterialNameContext *_localctx = _tracker.createInstance<MaterialNameContext>(_ctx, getState());
  enterRule(_localctx, 6, MdbParser::RuleMaterialName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(MdbParser::StringLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Material_propertyContext ------------------------------------------------------------------

MdbParser::Material_propertyContext::Material_propertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MdbParser::ColorMaterialPropertyContext* MdbParser::Material_propertyContext::colorMaterialProperty() {
  return getRuleContext<MdbParser::ColorMaterialPropertyContext>(0);
}

MdbParser::TextMaterialPropertyContext* MdbParser::Material_propertyContext::textMaterialProperty() {
  return getRuleContext<MdbParser::TextMaterialPropertyContext>(0);
}

MdbParser::Uint8MaterialPropertyContext* MdbParser::Material_propertyContext::uint8MaterialProperty() {
  return getRuleContext<MdbParser::Uint8MaterialPropertyContext>(0);
}

MdbParser::IntMaterialPropertyContext* MdbParser::Material_propertyContext::intMaterialProperty() {
  return getRuleContext<MdbParser::IntMaterialPropertyContext>(0);
}

MdbParser::SingleValueKeywordsContext* MdbParser::Material_propertyContext::singleValueKeywords() {
  return getRuleContext<MdbParser::SingleValueKeywordsContext>(0);
}

MdbParser::Keyword2FContext* MdbParser::Material_propertyContext::keyword2F() {
  return getRuleContext<MdbParser::Keyword2FContext>(0);
}

MdbParser::Keyword38Context* MdbParser::Material_propertyContext::keyword38() {
  return getRuleContext<MdbParser::Keyword38Context>(0);
}


size_t MdbParser::Material_propertyContext::getRuleIndex() const {
  return MdbParser::RuleMaterial_property;
}

void MdbParser::Material_propertyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMaterial_property(this);
}

void MdbParser::Material_propertyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMaterial_property(this);
}

MdbParser::Material_propertyContext* MdbParser::material_property() {
  Material_propertyContext *_localctx = _tracker.createInstance<Material_propertyContext>(_ctx, getState());
  enterRule(_localctx, 8, MdbParser::RuleMaterial_property);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MdbParser::Color1:
      case MdbParser::Color0: {
        enterOuterAlt(_localctx, 1);
        setState(61);
        colorMaterialProperty();
        break;
      }

      case MdbParser::Texture: {
        enterOuterAlt(_localctx, 2);
        setState(62);
        textMaterialProperty();
        break;
      }

      case MdbParser::Opacity: {
        enterOuterAlt(_localctx, 3);
        setState(63);
        uint8MaterialProperty();
        break;
      }

      case MdbParser::Keyword4D:
      case MdbParser::Keyword4E:
      case MdbParser::Keyword4F:
      case MdbParser::Keyword50: {
        enterOuterAlt(_localctx, 4);
        setState(64);
        intMaterialProperty();
        break;
      }

      case MdbParser::Keyword2A:
      case MdbParser::Keyword2B:
      case MdbParser::Keyword2D:
      case MdbParser::Keyword2E:
      case MdbParser::Keyword44:
      case MdbParser::Keyword45:
      case MdbParser::Keyword47:
      case MdbParser::Keyword48:
      case MdbParser::Keyword49:
      case MdbParser::Keyword4A:
      case MdbParser::Keyword4B:
      case MdbParser::Keyword4C: {
        enterOuterAlt(_localctx, 5);
        setState(65);
        singleValueKeywords();
        break;
      }

      case MdbParser::Keyword2F: {
        enterOuterAlt(_localctx, 6);
        setState(66);
        keyword2F();
        break;
      }

      case MdbParser::Keyword38: {
        enterOuterAlt(_localctx, 7);
        setState(67);
        keyword38();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColorMaterialPropertyContext ------------------------------------------------------------------

MdbParser::ColorMaterialPropertyContext::ColorMaterialPropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MdbParser::ColorMaterialPropertyKeywordContext* MdbParser::ColorMaterialPropertyContext::colorMaterialPropertyKeyword() {
  return getRuleContext<MdbParser::ColorMaterialPropertyKeywordContext>(0);
}

std::vector<tree::TerminalNode *> MdbParser::ColorMaterialPropertyContext::IntegerConstant() {
  return getTokens(MdbParser::IntegerConstant);
}

tree::TerminalNode* MdbParser::ColorMaterialPropertyContext::IntegerConstant(size_t i) {
  return getToken(MdbParser::IntegerConstant, i);
}


size_t MdbParser::ColorMaterialPropertyContext::getRuleIndex() const {
  return MdbParser::RuleColorMaterialProperty;
}

void MdbParser::ColorMaterialPropertyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterColorMaterialProperty(this);
}

void MdbParser::ColorMaterialPropertyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitColorMaterialProperty(this);
}

MdbParser::ColorMaterialPropertyContext* MdbParser::colorMaterialProperty() {
  ColorMaterialPropertyContext *_localctx = _tracker.createInstance<ColorMaterialPropertyContext>(_ctx, getState());
  enterRule(_localctx, 10, MdbParser::RuleColorMaterialProperty);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    colorMaterialPropertyKeyword();
    setState(71);
    match(MdbParser::IntegerConstant);
    setState(72);
    match(MdbParser::IntegerConstant);
    setState(73);
    match(MdbParser::IntegerConstant);
    setState(74);
    match(MdbParser::IntegerConstant);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColorMaterialPropertyKeywordContext ------------------------------------------------------------------

MdbParser::ColorMaterialPropertyKeywordContext::ColorMaterialPropertyKeywordContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MdbParser::ColorMaterialPropertyKeywordContext::Color0() {
  return getToken(MdbParser::Color0, 0);
}

tree::TerminalNode* MdbParser::ColorMaterialPropertyKeywordContext::Color1() {
  return getToken(MdbParser::Color1, 0);
}


size_t MdbParser::ColorMaterialPropertyKeywordContext::getRuleIndex() const {
  return MdbParser::RuleColorMaterialPropertyKeyword;
}

void MdbParser::ColorMaterialPropertyKeywordContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterColorMaterialPropertyKeyword(this);
}

void MdbParser::ColorMaterialPropertyKeywordContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitColorMaterialPropertyKeyword(this);
}

MdbParser::ColorMaterialPropertyKeywordContext* MdbParser::colorMaterialPropertyKeyword() {
  ColorMaterialPropertyKeywordContext *_localctx = _tracker.createInstance<ColorMaterialPropertyKeywordContext>(_ctx, getState());
  enterRule(_localctx, 12, MdbParser::RuleColorMaterialPropertyKeyword);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _la = _input->LA(1);
    if (!(_la == MdbParser::Color1

    || _la == MdbParser::Color0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TextMaterialPropertyContext ------------------------------------------------------------------

MdbParser::TextMaterialPropertyContext::TextMaterialPropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MdbParser::TextMaterialPropertyKeywordContext* MdbParser::TextMaterialPropertyContext::textMaterialPropertyKeyword() {
  return getRuleContext<MdbParser::TextMaterialPropertyKeywordContext>(0);
}

tree::TerminalNode* MdbParser::TextMaterialPropertyContext::StringLiteral() {
  return getToken(MdbParser::StringLiteral, 0);
}


size_t MdbParser::TextMaterialPropertyContext::getRuleIndex() const {
  return MdbParser::RuleTextMaterialProperty;
}

void MdbParser::TextMaterialPropertyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTextMaterialProperty(this);
}

void MdbParser::TextMaterialPropertyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTextMaterialProperty(this);
}

MdbParser::TextMaterialPropertyContext* MdbParser::textMaterialProperty() {
  TextMaterialPropertyContext *_localctx = _tracker.createInstance<TextMaterialPropertyContext>(_ctx, getState());
  enterRule(_localctx, 14, MdbParser::RuleTextMaterialProperty);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    textMaterialPropertyKeyword();
    setState(79);
    match(MdbParser::StringLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TextMaterialPropertyKeywordContext ------------------------------------------------------------------

MdbParser::TextMaterialPropertyKeywordContext::TextMaterialPropertyKeywordContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MdbParser::TextMaterialPropertyKeywordContext::Texture() {
  return getToken(MdbParser::Texture, 0);
}


size_t MdbParser::TextMaterialPropertyKeywordContext::getRuleIndex() const {
  return MdbParser::RuleTextMaterialPropertyKeyword;
}

void MdbParser::TextMaterialPropertyKeywordContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTextMaterialPropertyKeyword(this);
}

void MdbParser::TextMaterialPropertyKeywordContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTextMaterialPropertyKeyword(this);
}

MdbParser::TextMaterialPropertyKeywordContext* MdbParser::textMaterialPropertyKeyword() {
  TextMaterialPropertyKeywordContext *_localctx = _tracker.createInstance<TextMaterialPropertyKeywordContext>(_ctx, getState());
  enterRule(_localctx, 16, MdbParser::RuleTextMaterialPropertyKeyword);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(MdbParser::Texture);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Uint8MaterialPropertyContext ------------------------------------------------------------------

MdbParser::Uint8MaterialPropertyContext::Uint8MaterialPropertyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MdbParser::Uint8MaterialPropertyKeywordContext* MdbParser::Uint8MaterialPropertyContext::uint8MaterialPropertyKeyword() {
  return getRuleContext<MdbParser::Uint8MaterialPropertyKeywordContext>(0);
}

tree::TerminalNode* MdbParser::Uint8MaterialPropertyContext::IntegerConstant() {
  return getToken(MdbParser::IntegerConstant, 0);
}


size_t MdbParser::Uint8MaterialPropertyContext::getRuleIndex() const {
  return MdbParser::RuleUint8MaterialProperty;
}

void MdbParser::Uint8MaterialPropertyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUint8MaterialProperty(this);
}

void MdbParser::Uint8MaterialPropertyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MdbListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUint8MaterialProperty(this);
}

MdbParser::Uint8MaterialPropertyContext* MdbParser::uint8MaterialProperty() {
  Uint8MaterialPropertyContext *_localctx = _tracker.createInstance<Uint8MaterialPropertyContext>(_ctx, getState());
  enterRule(_localctx, 18, MdbParser::RuleUint8MaterialProperty);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    uint8MaterialPropertyKeyword();
    setState(84);
    match(MdbParser::IntegerConstant);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Uint8MaterialPropertyKeywordContext ------------------------------------------------------------------

MdbParser::Uint8MaterialPropertyKeywordContext::Uint8MaterialPropertyKeywordContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MdbParser::Uint8MaterialPropertyKeywordContext::Opacity() {
  return getToken(MdbParser::Opacity, 0);
}


size_t MdbParser::Uint8MaterialPropertyKeywordContext::getRuleIndex() const {
  return MdbParser::RuleUint8MaterialPropertyKeyword;
}
